# test_serialization

./: .gitignore  README.md
cpp/: CMakeLists.txt  conanfile.txt  readme.md
cpp/src/: main.cpp
cpp/src/capnproto/idl/: person.cpnp  person.cpnp.c++  person.cpnp.h
cpp/src/capnproto/include/: capnprotolib.h
cpp/src/capnproto/src/: capnprotolib.cpp
